[tool.poetry]
name = "task2week"
version = "0.1.0"
description = ""
authors = ["satohitoshi1 <satohitoshi121@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.0"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
